--- a/_posts/2022-01-04-ip.md
+++ b/_posts/2022-01-04-ip.md
@@ -16,7 +16,7 @@ site.url {{ site.url }}
 <pre><code class="shell-html">curl https://hzip.net</code></pre>
 
 
-
+## nginx 未显示代码高亮，与自定义的`<code>`起冲突。
 ```nginx
 server {
     listen 80;
